# emnlp-2026-code-submission

./: .gitignore  README.md  pyproject.toml  slurm_align.sh
download_resources/: flores200.sh  nllb200.sh
multilingual_eval/: utils.py
multilingual_eval/datasets/: collators.py  data_utils.py  dispatch_datasets.py  question_answering.py  realignment_dataset.py  realignment_task.py  token_classification.py  translation_dataset.py  weighted_data_utils.py  wikiann_ner.py  xnli.py  xtreme_udpos.py
multilingual_eval/information_retrieval/: data_fn.py  eval_clirmatrix.py  train_msmacro.py
multilingual_eval/models/: realignment_loss.py  simplified.py  stwrapper.py  utils.py  with_realignment_factory.py
multilingual_eval/training/: adapter_realignment_loop.py  batch_sizes.py  decoupled_weighted_selection.py  epoch_loop.py  evaluation_loops.py  realignment_loop.py  states.py  training_loops.py
scripts/2023_acl/: controlled_realignment.py
scripts/2025_aacl/: README.md  controlled_realignment.py  download_resources.sh  run_langs_selection.sh
scripts/ours/: compute_win_rates.py  controlled_realignment.py  download_resources.sh  download_resources_toy.sh  final_run_script.sh  final_run_script_toy.sh
slurm_scripts/AACL2025/: all_main_exps.sh  slurm-uv_wikiann.sh
slurm_scripts/MELT2025/: slurm_align-12_langs.sh  slurm_align-34_langs.sh  slurm_align-DIVERSE_URIEL_FEATURAL_14.sh  slurm_align-DIVERSE_URIEL_FEATURAL_3.sh  slurm_align-DIVERSE_URIEL_FEATURAL_7.sh  slurm_align-LEAST_DIVERSE_URIEL_FEATURAL_14.sh  slurm_align-LEAST_DIVERSE_URIEL_FEATURAL_3.sh  slurm_align.sh  (+14 more)
(+664 files in other folders)
