[project]
name = "nlp-project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "brokenaxes>=0.6.2",
    "conllu>=6.0.0",
    "datasets==3.6.0",
    "evaluate>=0.4.4",
    "gdown>=5.2.0",
    "ginza>=5.2.0",
    "konoha[mecab,sudachi]>=5.6.0",
    "latex>=0.7.0",
    "matplotlib>=3.10.3",
    "merge-args>=0.1.5",
    "nltk>=3.9.1",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "pycountry>=24.6.1",
    "pythainlp>=5.1.2",
    "seqeval>=1.2.2",
    "sudachidict-core>=20230927",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers==4.53.1",
    "wandb>=0.21.0",
]
